--- a/PlugHub.Plugins/Controls/PlugHub.Plugin.Controls/Themes/FluentAvalonia/Theme.axaml
+++ b/PlugHub.Plugins/Controls/PlugHub.Plugin.Controls/Themes/FluentAvalonia/Theme.axaml
@@ -2,8 +2,8 @@
 	xmlns="https://github.com/avaloniaui"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 	<ResourceDictionary.MergedDictionaries>
-		<ResourceInclude Source="avares://PlugHub.Plugin.Controls/Themes/FluentAvalonia/Controls/Themes/ResizeBox.axaml" />
-		<ResourceInclude Source="avares://PlugHub.Plugin.Controls/Themes/FluentAvalonia/Controls/Themes/RotationView.axaml" />
-		<ResourceInclude Source="avares://PlugHub.Plugin.Controls/Themes/FluentAvalonia/Controls/Themes/ContentDeck.axaml" />
+		<ResourceInclude Source="avares://PlugHub.Plugin.Controls/Themes/FluentAvalonia/Controls/ResizeBox.Theme.axaml" />
+		<ResourceInclude Source="avares://PlugHub.Plugin.Controls/Themes/FluentAvalonia/Controls/RotationView.Theme.axaml" />
+		<ResourceInclude Source="avares://PlugHub.Plugin.Controls/Themes/FluentAvalonia/Controls/ContentDeck.Theme.axaml" />
 	</ResourceDictionary.MergedDictionaries>
 </ResourceDictionary>
