--- a/PlugHub.Plugins/Controls/PlugHub.Plugin.Controls/Themes/Generic/Controls/RotationView.Theme.axaml
+++ b/PlugHub.Plugins/Controls/PlugHub.Plugin.Controls/Themes/Generic/Controls/RotationView.Theme.axaml
@@ -7,6 +7,7 @@
 	<ControlTheme x:Key="{x:Type core:RotationView}"
 				  TargetType="core:RotationView">
 
+		<!-- Control template -->
 		<Setter Property="Template">
 			<ControlTemplate>
 				<LayoutTransformControl>
