--- a/PlugHub.Plugins/Controls/PlugHub.Plugin.DockHost/Themes/FluentAvalonia/Controls/DockItem.Theme.axaml
+++ b/PlugHub.Plugins/Controls/PlugHub.Plugin.DockHost/Themes/FluentAvalonia/Controls/DockItem.Theme.axaml
@@ -10,7 +10,7 @@
 	</Design.PreviewWith>
 
 	<DrawingBrush
-		x:Key="CustomGridBrush"
+		x:Key="PlugHub.DockItem.GripBrush"
 		TileMode="Tile"
 		Stretch="None"
 		DestinationRect="0,0,4,8">
@@ -45,6 +45,10 @@
 		</DrawingBrush.Drawing>
 
 	</DrawingBrush>
+
+	<StreamGeometry x:Key="PlugHub.DockItem.PinIcon">M6,4 L12,4 L12,9 L6,9 Z M0,6 L4,6 L4,7 L0,7 Z M4,2 L6,2 L6,11 L4,11 Z</StreamGeometry>
+	<StreamGeometry x:Key="PlugHub.DockItem.UnpinIcon">M4,8 L4,2 L9,2 L9,8 Z M6,12 L7,12 L7,10 L6,10 Z M2,10 L11,10 L11,8 L2,8 Z</StreamGeometry>
+	<StreamGeometry x:Key="PlugHub.DockItem.CloseIcon">M4,4 L12,12 M12,4 L4,12</StreamGeometry>
 
 	<ControlTheme
 		x:Key="{x:Type dock:DockItem}"
@@ -105,7 +109,7 @@
 									Margin="4,0,4,0"
 									HorizontalAlignment="Stretch" VerticalAlignment="Center"
 									Height="8"
-									Background="{StaticResource CustomGridBrush}"/>
+									Background="{StaticResource PlugHub.DockItem.GripBrush}"/>
 
 								<StackPanel
 									Name="PART_HeaderButtonsPanel"
