--- a/PlugHub.Plugins/Controls/PlugHub.Plugin.DockHost/Themes/FluentAvalonia/Style.axaml
+++ b/PlugHub.Plugins/Controls/PlugHub.Plugin.DockHost/Themes/FluentAvalonia/Style.axaml
@@ -1,9 +1,7 @@
 <Styles
 	xmlns="https://github.com/avaloniaui"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-
-	<StyleInclude Source="avares://PlugHub.Plugin.DockHost/Themes/FluentAvalonia/Controls/Styles/DockCompass.axaml" />
-	<StyleInclude Source="avares://PlugHub.Plugin.DockHost/Themes/FluentAvalonia/Controls/Styles/DockControl.axaml" />
-	<StyleInclude Source="avares://PlugHub.Plugin.DockHost/Themes/FluentAvalonia/Controls/Styles/DockItem.axaml" />
-
+	<StyleInclude Source="avares://PlugHub.Plugin.DockHost/Themes/FluentAvalonia/Controls/DockCompass.Style.axaml" />
+	<StyleInclude Source="avares://PlugHub.Plugin.DockHost/Themes/FluentAvalonia/Controls/DockControl.Style.axaml" />
+	<StyleInclude Source="avares://PlugHub.Plugin.DockHost/Themes/FluentAvalonia/Controls/DockItem.Style.axaml" />
 </Styles>
